--- a/MyPortfolio/src/App.css
+++ b/MyPortfolio/src/App.css
@@ -1,22 +1,41 @@
 #header-image {
-  width: 250px;
+  width: 300px;
+}
+
+#about-background-image {
+  background-image: url("./assets/img/backgroundImage.png");
+  background-size: cover;
+  background-position: center;
+  min-height: 50vh;
+  color: #d1e1ff;
+}
+
+#about-me-image {
+  width: 50vw;
 }
 
 .project {
   width: 300px;
 }
+
 .project img {
   width: 300px;
 }
 
-.certificate > div {
+.certificate>div {
   width: 30vw;
 }
+
 .certificate img {
   width: 300px;
 }
+
 @media screen and (max-width: 768px) {
-  .certificate > div {
+  #about-me-image {
+    width: 100vw;
+    height:min-content;
+  }
+  .certificate>div {
     width: 100vw;
   }
 }
