--- a/MyPortfolio/src/index.css
+++ b/MyPortfolio/src/index.css
@@ -3,38 +3,98 @@
   font-family: Nunito;
   color: #010c30;
 }
+
 body {
   background-color: #d1e1ff;
-  min-height: 100vh;
+  overflow-x: hidden;
 }
+
+header {
+  margin-bottom: 20px;
+}
+
 #root {
   min-height: 100vh;
+  overflow-x: hidden;
 }
+
 i {
   font-size: 40px;
   padding: 5px;
 }
-p, i, h1, h2, h3 {
+
+p,
+i,
+h1,
+h2,
+h3 {
   color: inherit;
 }
+
 a {
   font-size: 1.5em;
 }
-p > a, p > i {
+
+p>a,
+p>i {
+  font-size: initial;
+}
+
+h1,
+h2,
+h3 {
+  font-family: Montserrat;
+  font-weight: bolder;
+}
+
+header {
+  font-size: 1.5em;
+}
+
+header p {
   font-size: initial;
 }
 
 .section {
   background-color: #98d4ff;
   padding: 5px;
+  max-width: 80vw;
+  color: #010c30;
+  margin: 5px;
 }
-.section.alt {
+
+.section-alt {
   background-color: #26a7f7;
   color: #d1e1ff;
+  max-width: 100vw;
 }
-.section.alt p, .section.alt a, .section.alt i, .section.alt h1, .section.alt h2, .section.alt h3 {
+
+.full {
+  width: 100%;
+}
+
+.split {
+  width: 50%;
+}
+
+.section-alt p,
+.section-alt a,
+.section-alt i,
+.section-alt h1,
+.section-alt h2,
+.section-alt h3 {
   color: #d1e1ff;
 }
+
+.section p,
+.section a,
+.section i,
+.section h1,
+.section h2,
+.section h3 {
+  color: #010c30;
+}
+
 .round {
   border-radius: 10px;
 }
@@ -50,24 +110,49 @@ p > a, p > i {
   display: flex;
   flex-wrap: wrap;
 }
+
 .flex.center {
   justify-content: center;
 }
+
 .flex.vertical-center {
   align-items: center;
 }
+
 .flex.around {
   justify-content: space-around;
 }
+
+.flex.vertical-around {
+  align-content: space-around;
+}
+
 .flex.evenly {
   justify-content: space-evenly;
 }
+
+.flex.between {
+  justify-content: space-between;
+}
+
 .flex.column {
   flex-direction: column;
+}
+
+.flex.nowrap {
+  flex-wrap: nowrap;
 }
 
 @media screen and (max-width: 768px) {
   a {
     font-size: 1.2em;
+  }
+
+  .flex.nowrap {
+    flex-wrap: wrap;
+  }
+
+  .split {
+    width: 100%;
   }
 }
