--- a/MyPortfolio/src/index.css
+++ b/MyPortfolio/src/index.css
@@ -6,6 +6,9 @@
 
 body {
   background-color: #d1e1ff;
+}
+
+body, #root {
   overflow-x: hidden;
 }
 
@@ -15,7 +18,6 @@ header {
 
 #root {
   min-height: 100vh;
-  overflow-x: hidden;
 }
 
 i {
@@ -31,12 +33,14 @@ h3 {
   color: inherit;
 }
 
-a {
+a,
+header {
   font-size: 1.5em;
 }
 
 p>a,
-p>i {
+p>i,
+header p {
   font-size: initial;
 }
 
@@ -47,26 +51,20 @@ h3 {
   font-weight: bolder;
 }
 
-header {
-  font-size: 1.5em;
-}
-
-header p {
-  font-size: initial;
-}
-
 .section {
   background-color: #98d4ff;
   padding: 5px;
   max-width: 80vw;
   color: #010c30;
   margin: 5px;
+  overflow-x: hidden;
 }
 
 .section-alt {
   background-color: #26a7f7;
   color: #d1e1ff;
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .full {
