Added images for the new awards, added some responsiveness to some elements

--- a/src/Navagation.css
+++ b/src/Navagation.css
@@ -28,14 +28,15 @@
     visibility: visible;
 }
 
-#nav-bar>a {
-    margin: 0 5px;
-    font-size: 1.6em;
-}
-
 #nav-bar>* {
     visibility: hidden;
     transition-duration: 0s;
+}
+
+#nav-bar>a {
+    margin: 0 5px;
+    font-size: 1.6em;
+    transition-duration: 0.15s;
 }
 
 #nav-bubble:hover #nav-bar>* {
